# task-summoner

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  config.yaml.example  improvs.md  install.sh  plan.md  pyproject.toml
.github/workflows/: ci.yml  dep-audit.yml  render-diagrams.yml
backend/: config.yaml.example  pyproject.toml
backend/src/task_summoner/: __main__.py  cli.py  cli_config.py  config.py  docs_repo.py  gates.py  setup_wizard.py  user_config.py
backend/src/task_summoner/api/: app.py  deps.py
backend/src/task_summoner/api/routers/: __init__.py  agent_profiles.py  config.py  cost.py  decisions.py  events.py  failures.py  gates.py  health.py  plans.py  rfcs.py  setup.py  skills.py  streams.py  workflow.py
backend/src/task_summoner/api/schemas/: __init__.py  agent_profile.py  cost.py  decision.py  failure.py  gate.py  health.py  plan.py  rfc.py  setup.py  skill.py  workflow.py
backend/src/task_summoner/core/: state_machine.py
backend/src/task_summoner/events/: bus.py
backend/src/task_summoner/models/: __init__.py  context.py  cost.py  enums.py  events.py
backend/src/task_summoner/observability/: __init__.py  tracing.py
backend/src/task_summoner/providers/: config.py
backend/src/task_summoner/providers/agent/: __init__.py  factory.py  protocol.py
backend/src/task_summoner/providers/agent/claude_code/: __init__.py  adapter.py  plugin_resolver.py  session.py
backend/src/task_summoner/providers/board/: __init__.py  factory.py  protocol.py
backend/src/task_summoner/providers/board/jira/: __init__.py  adapter.py
backend/src/task_summoner/providers/board/linear/: __init__.py  client.py
backend/src/task_summoner/runtime/: dispatcher.py  orchestrator.py  stream_writer.py
backend/src/task_summoner/states/: __init__.py  base.py  checking_doc.py  creating_doc.py  fixing_mr.py  implementing.py  improving_doc.py  planning.py  queued.py  waiting_doc_review.py  waiting_plan_review.py
backend/src/task_summoner/tracker/: message_tracker.py
backend/src/task_summoner/utils/: paths.py  subprocess.py
backend/tests/: conftest.py  test_api_app.py  test_api_app_tracing.py  test_api_issue_streams.py  test_api_setup.py  test_claude_code_adapter.py  test_cli.py  test_cli_config.py  test_cli_shutdown.py  test_codex_adapter.py  test_config.py  test_dispatcher_quarantine.py  test_dispatcher_retry_boundary.py  test_docs_repo.py  test_events.py  test_gates.py  test_git_workspace.py  test_models.py  test_observability_integration.py  test_observability_tracing.py  test_orchestrator.py  test_plans_api.py  test_plugin_resolver.py  test_providers_agent_factory.py  test_setup_wizard.py  test_state_machine.py  test_state_store.py  test_states.py  test_stream_writer.py  test_user_config.py  test_utils_subprocess.py
docs/: approval-flow.md  c4_component.dsl  lifecycle-flow.md
frontend/: .gitignore  biome.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: main.tsx  styles.css
frontend/src/components/: ArcaneBackground.tsx  Card.tsx  DecisionsSidebar.tsx  Dropdown.tsx  Field.tsx  GateCard.tsx  GatesWaitingPanel.tsx  IssueActivityTimeline.tsx  (+12 more)
src/board_dispatcher/: __main__.py  cli.py  config.py  constants.py
src/task_summoner/: __main__.py  cli.py  config.py  setup_wizard.py
tests/: conftest.py  test_adf_converter.py  test_agent_runner.py  test_api_app.py  test_api_setup.py  test_board_not_found.py  test_claude_code_adapter.py  test_claude_code_auth.py  test_cli.py  test_cmd_clean.py  test_codex_adapter.py  test_config.py  test_events.py  test_git_workspace.py  test_jira_adapter.py  test_jira_client.py  test_linear_adapter.py  test_linear_client.py  test_message_tracker.py  test_models.py  test_orchestrator.py  test_provider_isolation.py  test_providers_agent_factory.py  test_providers_board_factory.py  test_setup_wizard.py  test_state_machine.py  test_state_store.py  test_states.py  test_utils.py
(+166 files in other folders)
