[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "task-summoner"
version = "0.1.0"
description = "Local-first agentic board management — provider-agnostic, human-in-the-loop SDLC orchestrator"
license = "MIT"
requires-python = ">=3.11"
authors = [
    {name = "Matheus Silva", email = "matheusolivsilv.ai@gmail.com"},
]
dependencies = [
    "claude-agent-sdk>=0.1.50",
    "fastapi>=0.100",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "structlog>=24.0",
    "uvicorn>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/teachmewow/task-summoner"
Repository = "https://github.com/teachmewow/task-summoner"

[project.scripts]
task-summoner = "task_summoner.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["task_summoner"]

[tool.coverage.report]
show_missing = true
fail_under = 89
