[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "task-summoner"
version = "0.1.0"
description = "Local-first agentic board management — provider-agnostic, human-in-the-loop SDLC orchestrator"
license = "MIT"
requires-python = ">=3.11"
authors = [
    {name = "Matheus Silva", email = "matheusolivsilv.ai@gmail.com"},
]
dependencies = [
    "claude-agent-sdk>=0.1.50",
    "fastapi>=0.100",
    "httpx>=0.27",
    "langsmith>=0.3.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "structlog>=24.0",
    "uvicorn>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "pydantic>=2.0",
    "ruff>=0.6",
]

[project.urls]
Homepage = "https://github.com/teachmewow/task-summoner"
Repository = "https://github.com/teachmewow/task-summoner"

[project.scripts]
task-summoner = "task_summoner.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
task_summoner = ["web_dist/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["task_summoner"]

[tool.coverage.report]
show_missing = true
fail_under = 89

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".venv", "artifacts", "src/task_summoner/web_dist"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = [
    "E501",   # line too long — we rely on the formatter for this
    "B008",   # function call in default argument (common with FastAPI/Pydantic Field)
    "UP042",  # StrEnum — `class X(str, Enum)` is more explicit for JSON serialization
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
